# ProyectoFinal

./: .gitignore  Arma.cpp  Arma.h  CMakeLists.txt  Enemigo.cpp  Enemigo.h  GameController.cpp  GameController.h  Habitacion.cpp  Habitacion.h  Inventario.cpp  Inventario.h  JuanPablo.cpp  JuanPablo.h  Jugador.cpp  Jugador.h  Objeto.cpp  Objeto.h  Personaje.cpp  Personaje.h  Pocion.cpp  Pocion.h  README.md  RoomManager.cpp  RoomManager.h  Simon.cpp  Simon.h  hh.cpp  hh.h  main.cpp  x.cpp  x.h
