cmake_minimum_required(VERSION 4.0)
project(VideoJuego_Proyecto_finalPOO)

set(CMAKE_CXX_STANDARD 20)

add_executable(VideoJuego_Proyecto_finalPOO main.cpp
        Personaje.cpp
        Personaje.h
        Jugador.cpp
        Jugador.h
        Simon.cpp
        Simon.h
        JuanPablo.cpp
        JuanPablo.h
        hh.cpp
        hh.h)
